--- a/index.html
+++ b/index.html
@@ -4,9 +4,39 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Vue Carousel</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;700&display=swap" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/vue@2.6.14/dist/vue.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
     
+    <main class="svg">
+        <section id="app" class="container">
+            <div  class="slider-wrapper">
+                <div v-for="(item, i) in items" class="slider-item" :class="(activeIndex === i)? 'active': ' ' ">
+                    <div class="slider-img"><img :src="item.immagine" :alt="item.titolo"></div>
+                    <div class="text shadow">
+                        <h2>{{item.titolo}}</h2>
+                        <p>{{item.descrizione}}</p>
+                    </div>
+                </div>
+            </div>
+            <div class="controller-wrapper">
+                <div v-for="(item, i) in items" class="controller-item" :class="(activeIndex === i)? 'active': ' ' " @click="goToSlide(i)" >
+                    <img @click="click()" :src="item.immagine" :alt="item.titolo">
+                </div>
+                <div @click="nextSlide()" class="btn up"><i class="fa-solid fa-chevron-down"></i></div>
+                <div @click="prevSlide()" class="btn down"><i class="fa-solid fa-chevron-up"></i></div> 
+            </div>
+        </section>
+    </main>
+
+
+
+    <script src="js/app_2.js"></script>
 </body>
 </html>
